@@ -1,0 +1,7 @@
+#import <objc/Object.h>
+
+int main(void)
+{
+  [Object class];
+  return 0;
+}
