@@ -1,3 +1,7 @@
+2009-03-13  David Ayers  <ayers@fsfe.org>
+
+	* objc/execute/trivial.m. New test.
+
 2009-03-13  Jack Howarth  <howarth@bromo.med.uc.edu>
 
 	PR target/39137
